fix live2d not working on mobile

--- a/static/resources/D-Sketon/plugin-live2d/css/live2d-mobile.css
+++ b/static/resources/D-Sketon/plugin-live2d/css/live2d-mobile.css
@@ -35,8 +35,9 @@
 
 @media screen and (max-width: 768px) {
     #live2d-plugin {
-        z-index: 1;
-        display: none;
+        transform: scale(0.6);
+        bottom: 0;
+        right: 0;
     }
 }
 
@@ -127,8 +128,8 @@
 
 @media screen and (max-width: 768px) {
     #live2d-chat-model {
-        z-index: 1;
-        display: none;
+        width: 90%;
+        bottom: 10px;
     }
 }
 
